core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/ZVC__Zoom_User_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Zoom User Configuration</label>
</CustomObject>