core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__Enable_Join_Before_Host__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Enable_Join_Before_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Join Before Host</label>
    <type>Checkbox</type>
</CustomField>