core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__Generate_Random_non_PMI_Passscode__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Generate_Random_non_PMI_Passscode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Random non-PMI Passscode</label>
    <type>Checkbox</type>
</CustomField>