core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__Non_PMI_Meeting_Passcode__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Non_PMI_Meeting_Passcode__c</fullName>
    <label>Non-PMI Meeting Passcode</label>
    <type>TextArea</type>
</CustomField>