core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__PMI_Enabled_For_Scheduled_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__PMI_Enabled_For_Scheduled_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMI Enabled For Scheduled Meeting</label>
    <type>Checkbox</type>
</CustomField>