core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__Send_Email_to_Attendees_at_Lauch__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Send_Email_to_Attendees_at_Lauch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email to Attendees at Lauch</label>
    <type>Checkbox</type>
</CustomField>