core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__Send_ICS_in_Invitation_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Send_ICS_in_Invitation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send ICS in Invitation Email</label>
    <type>Checkbox</type>
</CustomField>