core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__Set_a_passscode_for_all_non_PMI_meetings__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Set_a_passscode_for_all_non_PMI_meetings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set a passscode for all non-PMI meetings</label>
    <type>Checkbox</type>
</CustomField>