core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__Use_PMI_Passscode_all_non_PMI_Meetings__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Use_PMI_Passscode_all_non_PMI_Meetings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use PMI Passscode all non-PMI Meetings</label>
    <type>Checkbox</type>
</CustomField>