core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__ZM_Push_Meeting_To_Calendar__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Push_Meeting_To_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZM Push Meeting To Calendar</label>
    <type>Checkbox</type>
</CustomField>