core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__ZP_Click_Behavior__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZP_Click_Behavior__c</fullName>
    <label>ZP Click Behavior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>