core/unpackaged/main/default/objects/ZVC__Zoom_User_Configuration__c/fields/ZVC__ZP_Pop_Zoom_Phone_Widget__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZP_Pop_Zoom_Phone_Widget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZP Pop Zoom Phone Widget</label>
    <type>Checkbox</type>
</CustomField>